Bug 2167 - Printer names broken on Solaris
Summary: Printer names broken on Solaris
Status: RESOLVED FIXED
Alias: None
Product: xprint
Classification: Unclassified
Component: Server: Spooler support: Other (show other bugs)
Version: unspecified
Hardware: SPARC Solaris
: high blocker
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-28 09:25 UTC by David Schweiger
Modified: 2005-01-23 01:21 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Proposed patch for 2005-01-08-trunk (2.14 KB, patch)
2005-01-08 15:07 UTC, Roland Mainz
alan.coopersmith: review+
Details | Splinter Review
[FIXED_X11R68x] Patch for commit into Xorg 2005-01-10-trunk incl. Changelog comment (same as attachment #1641) (3.57 KB, patch)
2005-01-10 15:37 UTC, Roland Mainz
roland.mainz: 6.8-branch+
Details | Splinter Review

Description David Schweiger 2004-12-28 09:25:12 UTC
The Xprt server shipped with XOrg release X11R6.8.1 generates faulty printer
names  on Solaris 8. In Camia3D, Mozilla and xplsprinters I see this:
$ xplsprinters
printer: nigel_bwxp-printerattr.descriptor=Roman Nigels office printer@levin:35
printer: xp_ps_spooldir_tmp_Xprintjobs@levin:35
The affected print queues are unuseable.

Linux does not have that problem neither does the native Xprt version from Solaris.
Comment 1 Roland Mainz 2005-01-08 15:03:31 UTC
Taking bug...
Comment 2 Roland Mainz 2005-01-08 15:07:51 UTC
Created attachment 1641 [details] [review]
Proposed patch for 2005-01-08-trunk
Comment 3 Roland Mainz 2005-01-08 15:08:53 UTC
Comment on attachment 1641 [details] [review]
Proposed patch for 2005-01-08-trunk

Requesting r= from Alan...
Comment 4 Roland Mainz 2005-01-08 15:15:19 UTC
Comment on attachment 1641 [details] [review]
Proposed patch for 2005-01-08-trunk

(trying again, now with an email)
Comment 5 Alan Coopersmith 2005-01-10 10:50:29 UTC
Comment on attachment 1641 [details] [review]
Proposed patch for 2005-01-08-trunk

The original version in the Solaris Xprt has a \\t at that point, which should
do the same thing, just defer the \t expansion into the nawk instead of at C
compilation time - either way should work.
Comment 6 Roland Mainz 2005-01-10 15:37:30 UTC
Created attachment 1662 [details] [review]
[FIXED_X11R68x] Patch for commit into Xorg 2005-01-10-trunk incl. Changelog comment (same as attachment #1641 [details] [review])
Comment 7 Roland Mainz 2005-01-10 15:39:43 UTC
Patch checked-in into Xorg trunk:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.663; previous revision: 1.662
/cvs/xorg/xc/programs/Xserver/Xprint/spooler.c,v  <--  spooler.c
new revision: 1.4; previous revision: 1.3
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 8 Roland Mainz 2005-01-10 15:49:13 UTC
Patch checked-in into xprint_packagertest_20041217 test branch...

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.614.2.3; previous revision: 1.614.2.2
/cvs/xorg/xc/programs/Xserver/Xprint/spooler.c,v  <--  spooler.c
new revision: 1.3.16.1; previous revision: 1.3
Mailing the commit message to xorg-commit@lists.freedesktop.org...

... marking bug as FIXED.
Comment 9 Roland Mainz 2005-01-10 15:50:07 UTC
Comment on attachment 1662 [details] [review]
[FIXED_X11R68x] Patch for commit into Xorg 2005-01-10-trunk incl. Changelog comment (same as attachment #1641 [details] [review])

Requesting approval for X11R6.8.x stable branch to get the SOlaris print queue
enumeration working properly if the printer as a description.
Comment 10 Roland Mainz 2005-01-10 15:52:32 UTC
Comment on attachment 1662 [details] [review]
[FIXED_X11R68x] Patch for commit into Xorg 2005-01-10-trunk incl. Changelog comment (same as attachment #1641 [details] [review])

[sorry, previous attempt used the wrong flag (errno=EUSERTOOTIRED)]
Requesting approval for X11R6.8.x stable branch to get the Solaris print queue
enumeration working properly if the printer as a description.
Comment 11 Roland Mainz 2005-01-23 19:47:21 UTC
Comment on attachment 1662 [details] [review]
[FIXED_X11R68x] Patch for commit into Xorg 2005-01-10-trunk incl. Changelog comment (same as attachment #1641 [details] [review])

Patch approved for commit into X11R6.8.x stable branch in the 2005-01-14
release-wranglers phone call.
Comment 12 Roland Mainz 2005-01-23 20:21:26 UTC
Comment on attachment 1662 [details] [review]
[FIXED_X11R68x] Patch for commit into Xorg 2005-01-10-trunk incl. Changelog comment (same as attachment #1641 [details] [review])

Patch checked-in into X11R6.8.x stable branch:
/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.130; previous revision: 1.365.2.129
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/Xprint/spooler.c,v  <--  spooler.c
new revision: 1.3.4.1; previous revision: 1.3
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.