//bugs.freedesktop.org/show_bug.cgi?id=2167) attachment #1641     (https://bugs.freedesktop.org/attachment.cgi?id=1641): Fix broken     Solaris print queue enumeration.